Assume there are no thousand separators when converting numerical strings

As this is supposed to convert numerical strings using both dots and commas
as decimal separators independent of the locale apparently, we end up with
ambiguities for numbers with exactly three decimals. If we assume there
are no thousand/group separators we can avoid that, and that seems what
the other open implementations do.

BUG: 474661