core/script/js_util_p.h
@@ -19,7 +19,7 @@ class JSUtil : public QObject
 public:
     Q_INVOKABLE QJSValue crackURL(const QString &cURL) const;
     Q_INVOKABLE QJSValue printd(const QJSValue &oFormat, const QDateTime &oDate) const;
-    Q_INVOKABLE double stringToNumber(const QString &number) const;
+    Q_INVOKABLE static double stringToNumber(const QString &number);
     Q_INVOKABLE QString numberToString(double number, const QString &fmt = QStringLiteral("g"), int precision = 6, const QString &localeName = {}) const;
 };
 
